# ImageUtil

./: README.md  build.gradle  settings.gradle  signed.jks  基于Android图片处理.docx
app/: MainActivity.java  build.gradle
app/src/androidTest/java/com/bysj/imageutil/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bysj/imageutil/: MyApplication.java
app/src/main/java/com/bysj/imageutil/adapter/: ICropResAdapter.java  ICropSetAdapter.java  IEnAdapter.java
app/src/main/java/com/bysj/imageutil/adapter/drag/: GapDecoration.java  GapGridDecoration.java  RecyclerItem.java  SimpleRecyclerGridAdapter.java  SimpleRecyclerListAdapter.java  SimpleRecyclerViewHolder.java
app/src/main/java/com/bysj/imageutil/adapter/listener/: ICropOnClickListener.java
app/src/main/java/com/bysj/imageutil/base/: BaseActivity.java  BaseFragment.java
app/src/main/java/com/bysj/imageutil/bean/: ICropResBean.java  ICropSetBean.java  SpliceBean.java
app/src/main/java/com/bysj/imageutil/sqlite/: CacheImgDBHelper.java  ImgSqlHelper.java
app/src/main/java/com/bysj/imageutil/ui/: FragmentTest.java
app/src/main/java/com/bysj/imageutil/ui/activity/: MainActivity.java  SplashActivity.java  SpliceResultActivity.java
app/src/main/java/com/bysj/imageutil/ui/components/: MyListView.java  RegulatorView.java  ZoomImageView.java
app/src/main/java/com/bysj/imageutil/ui/fragment/: EvaluatFragment.java  ICropFragment.java  (+8 more)
app/src/main/java/com/bysj/imageutil/util/: ActivityManageHelper.java  ClickUtil.java  ExternalAppParseUtil.java  FileUtils.java  GetImgPath.java  GlideUtil.java  HandleKeys.java  ImageCropUtil.java  ImageSpliceUtil.java  IntentKeys.java  LogCat.java  ShareUtil.java  WeakHandler.java
app/src/main/res/anim/: dialog_hide.xml  dialog_show.xml
app/src/main/res/drawable/: blue_bg_radius.xml  blue_line_border.xml  confirm_bg.xml  image_border.xml  top_tab_bg.xml
app/src/main/res/drawable-v24/: dialog_bg.xml  splash_bg.xml  white_line_border.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_splice_result.xml  dialog_loading.xml  dialog_prompt.xml  drag_image.xml  fragment_crop.xml  fragment_evaluat.xml  fragment_i_edit.xml  fragment_i_enhance.xml  fragment_right_tab.xml  fragment_splice.xml  fragment_tab.xml  item_simple_grid.xml  item_simple_list.xml  list_evaluation.xml  recycler_crop_result.xml  recycler_crop_set_item.xml
app/src/main/res/menu/: crop_result_menu.xml  main_navigation_items.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/bysj/imageutil/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
imgEvaluation/: build.gradle
imgEvaluation/src/androidTest/java/com/bysj/imgevaluation/: ExampleInstrumentedTest.java
imgEvaluation/src/main/: AndroidManifest.xml
imgEvaluation/src/main/java/com/bysj/imgevaluation/: EvaluatUtil.java  ImageUtil.java
imgEvaluation/src/main/java/com/bysj/imgevaluation/bean/: EvaluatBean.java
imgEvaluation/src/main/java/com/bysj/imgevaluation/listener/: EvaluatAllListener.java  EvaluatListener.java
imgEvaluation/src/main/python/: detect_blur.py  detect_contrast_ratio.py  detect_saturation.py
imgEvaluation/src/test/java/com/bysj/imgevaluation/: ExampleUnitTest.java
opencv450/: build.gradle
opencv450/src/androidTest/java/com/bysj/opencv450/: ExampleInstrumentedTest.java
opencv450/src/main/: AndroidManifest.xml
opencv450/src/main/cpp/: CMakeLists.txt  ienhance.cpp  ienhance.h  native-lib.cpp
opencv450/src/main/java/com/bysj/opencv450/: HandleImageListener.java  OpenCV.java  OpenCVUtil.java  PictureMatrix.java
opencv450/src/test/java/com/bysj/opencv450/: ExampleUnitTest.java
release/: private_key.pepk
(+9 files in other folders)
